# tenmanner-discord-bot

./: .env.template  .gitignore  Cargo.toml  README.md
bot/: .env.template  Cargo.toml
bot/src/: commands.rs  config.rs  main.rs  reactions.rs  sheets.rs  sheets_manager.rs  storage_manager.rs  util.rs
infrastructure/: .env.template  Dockerfile  cdk.json  package-lock.json  package.json
infrastructure/codepipeline/: deploy-pipeline.sh  pipeline.yml
infrastructure/ecr/: resources.yml
infrastructure/lib/: container-stack.ts  dynamo-stack.ts  iam-stack.ts  index.ts  secrets-stack.ts
infrastructure/secrets/: resources.yml
infrastructure/types/: environment.ts
src/: commands.rs  config.rs  main.rs  reactions.rs  util.rs
