[package]
edition = "2021"
name = "ten-man-bot"
version = "0.1.0"

[dependencies]
aws-config = "0.15.0"
aws-sdk-dynamodb = "0.15.0"
aws-types = "0.15.0"
dotenv = "0.15.0"
lazy_static = "1.4.0"
serenity = {version = "0.11.2", default-features = false, features = ["builder", "collector", "client", "model", "gateway", "rustls_backend"]}
tokio = {version = "1.0", features = ["macros", "rt-multi-thread"]}
